xee-xslt-ast/tests/snapshots/snapshot_tests__analyze_string_absent_fallbacks.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:analyze-string xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" select=\"true()\" regex=\"foo\"><xsl:matching-substring>Matching</xsl:matching-substring><xsl:non-matching-substring>Nonmatching</xsl:non-matching-substring></xsl:analyze-string>\"#)"
---
Ok(Instruction(AnalyzeString(AnalyzeString(
  select: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: OwnedName(
              local_name_str: "true",
              namespace_str: "http://www.w3.org/2005/xpath-functions",
              prefix_str: "",
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 77,
      end: 83,
    ),
  ),
  regex: ValueTemplate(
    template: [
      String(
        text: "foo",
        span: Span(
          start: 92,
          end: 95,
        ),
      ),
    ],
    phantom: PhantomData,
  ),
  flags: None,
  matching_substring: Some(MatchingSubstring(
    sequence_constructor: [
      Content(Text("Matching")),
    ],
    span: Span(
      start: 98,
      end: 120,
    ),
  )),
  non_matching_substring: Some(NonMatchingSubstring(
    sequence_constructor: [
      Content(Text("Nonmatching")),
    ],
    span: Span(
      start: 155,
      end: 181,
    ),
  )),
  fallbacks: [],
  span: Span(
    start: 1,
    end: 19,
  ),
))))
