xee-xslt-ast/tests/snapshots/snapshot_tests__expand_text_should_expand_text.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\" expand-text=\"yes\">Hello {world}!</xsl:if>\"#)"
---
Ok(Instruction(If(If(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: OwnedName(
              local_name_str: "true",
              namespace_str: "http://www.w3.org/2005/xpath-functions",
              prefix_str: "",
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 63,
      end: 69,
    ),
  ),
  sequence_constructor: [
    Content(Text("Hello ")),
    Content(Value(Expression(
      xpath: XPath(Expr([
        Path(PathExpr(
          steps: [
            AxisStep(AxisStep(
              axis: Child,
              node_test: NameTest(Name(OwnedName(
                local_name_str: "world",
                namespace_str: "",
                prefix_str: "",
              ))),
              predicates: [],
            )),
          ],
        )),
      ])),
      span: Span(
        start: 96,
        end: 101,
      ),
    ))),
    Content(Text("!")),
  ],
  span: Span(
    start: 1,
    end: 7,
  ),
))))
